# chess

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: board.h  engine.h  game.h  helper.h  movement.h
src/: board.cpp  engine.cpp  game.cpp  helper.cpp  main.cpp  movement.cpp
tests/: engine_test.cpp  game_test.cpp  helper_test.cpp  movement_test.cpp  test.cpp
